<resources>
    <string name="app_name">이게뭐야?</string>

    <!-- Sign In -->
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="signin_email">로그인 또는 계정 생성 및 로그인</string>
    <string name="signin_google">Google 계정으로 로그인</string>
    <string name="signup_complete">회원가입 성공</string>
    <string name="signin_complete">로그인 성공</string>
    <string name="signout">쉴래, 로그아웃!</string>
    <string name="signout_success">로그아웃 성공</string>
    <string name="signout_fail">로그아웃 실패</string>
    <string name="signout_fail_null">이메일과 비밀번호를 입력해주세요</string>

    <!-- Bottom Navigation View -->
    <string name="diary">다이어리</string>
    <string name="emotion">오늘 내 기분은?</string>
    <string name="teacher">선생님</string>

    <!-- Teacher -->
    <string name="hint_teacher">선생님께 물어보세요!</string>
    <string name="chat">알려주세요!</string>
    <string name="chat_bubble">말풍선</string>

    <!-- Toolbar -->
    <string name="back">Back</string>
    <string name="no_image">no_image</string>

    <!-- etc -->
    <item name="visible" type="id"/>
    <item name="masked" type="id"/>

    <string name="title_activity_diary_more_view">더보기</string>
    <string name="diary_delete">삭제</string>
    <string name="diary_share">공유하기</string>

    <!-- Crop -->
    <string name="crop_image_activity_title"></string>
    <string name="crop_image_menu_rotate_left">반시계 회전</string>
    <string name="crop_image_menu_rotate_right">회전</string>
    <string name="crop_image_menu_crop">자르기</string>
    <string name="crop_image_menu_flip">반전</string>
    <string name="crop_image_menu_flip_horizontally">좌우반전</string>
    <string name="crop_image_menu_flip_vertically">상하반전</string>
    <string name="pick_image_intent_chooser_title">이미지 선택</string>
    <string name="crop_image_activity_no_permissions">필수 권한이 없어서 취소합니다.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_emotion_result">EmotionResultActivity</string>

</resources>





