<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                tools:context=".LoginActivity">

    <ImageView
            android:src="@drawable/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_above="@id/signin_layout"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:scaleX="0.5"
            android:scaleY="0.5"/>

    <LinearLayout
            android:id="@+id/signin_layout"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@color/colorWhite"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp">

        <com.google.android.material.textfield.TextInputLayout
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    android:singleLine="true"
                    android:lines="1"
                    android:id="@+id/email_edittext"
                    android:hint="@string/email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    android:singleLine="true"
                    android:lines="1"
                    android:id="@+id/password_edittext"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:id="@+id/email_login_button"
                android:text="@string/signin_email"
                android:theme="@style/ButtonStyle"
                android:textColor="@color/colorWhite"
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="15dp"
                />
    </LinearLayout>

</RelativeLayout>